[gd_scene load_steps=8 format=4 uid="uid://ror8c8gr62y8"]

[ext_resource type="Script" uid="uid://7x5fy7n68ova" path="res://scenes/map/world_gen.gd" id="1_xrrna"]
[ext_resource type="Script" uid="uid://b8vr3c8v7wstb" path="res://addons/gaea/generators/2D/noise_generator/noise_generator.gd" id="2_f4342"]
[ext_resource type="Resource" uid="uid://cro0s3mvoraer" path="res://map/noise_gen_settings.tres" id="3_x2dxf"]
[ext_resource type="Script" uid="uid://c64t0aufp4gyj" path="res://addons/gaea/renderers/2D/tilemap_gaea_renderer.gd" id="3_yuta8"]
[ext_resource type="TileSet" uid="uid://cnq856713e1no" path="res://scenes/map/water_layer_tileset.tres" id="5_x2dxf"]
[ext_resource type="TileSet" uid="uid://dp14aksyru2yj" path="res://scenes/map/biomes_layer_tileset.tres" id="7_gg3rn"]
[ext_resource type="TileSet" uid="uid://qrtm7ehko5gy" path="res://scenes/map/land_layer_tile_set.tres" id="8_g13xh"]

[node name="WorldGen" type="Node2D"]
script = ExtResource("1_xrrna")

[node name="NoiseGenerator" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_f4342")
settings = ExtResource("3_x2dxf")
tile_size = Vector2i(48, 48)
generate_on_ready = false
random_seed = false
seed = 1850221320
metadata/_custom_type_script = "uid://b8vr3c8v7wstb"

[node name="TilemapGaeaRenderer" type="Node" parent="." node_paths=PackedStringArray("tile_map_layers", "generator")]
script = ExtResource("3_yuta8")
tile_map_layers = [NodePath("../Tilemap/WaterLayer"), NodePath("../Tilemap/LandLayer"), NodePath("../Tilemap/ShoreLayer"), NodePath("../Tilemap/BiomeLayer")]
generator = NodePath("../NoiseGenerator")
metadata/_custom_type_script = "uid://c64t0aufp4gyj"

[node name="Tilemap" type="Node2D" parent="."]

[node name="WaterLayer" type="TileMapLayer" parent="Tilemap"]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAAAAAAAgAJAAIAAAAAAAEAAgAJAAIAAAAAAAIAAgAJAAIAAAAAAAMAAgAJAAIAAAAAAAQAAgAJAAIAAAAAAAUAAgAJAAIAAAAAAAYAAgAJAAIAAAAAAAcAAgAJAAIAAAAAAAgAAgAJAAIAAAAAAAkAAgAJAAIAAAAAAAoAAgAJAAIAAAAAAAsAAgAJAAIAAAAAAAwAAgAJAAIAAAAAAA0AAgAJAAIAAAAAAA4AAgAJAAIAAAAAAA8AAgAJAAIAAAAAABAAAgAJAAIAAAAAABEAAgAJAAIAAAAAABIAAgAJAAIAAAAAABMAAgAJAAIAAAAAABQAAgAJAAIAAAAAABUAAgAJAAIAAAAAABYAAgAJAAIAAAAAABcAAgAJAAIAAAABAAAAAgAJAAIAAAABAAEAAgAJAAIAAAABAAIAAgAJAAIAAAABAAMAAgAJAAIAAAABAAQAAgAJAAIAAAABAAUAAgAJAAIAAAABAAYAAgAJAAIAAAABAAcAAgAJAAIAAAABAAgAAgAJAAIAAAABAAkAAgAJAAIAAAABAAoAAgAJAAIAAAABAAsAAgAJAAIAAAABAAwAAgAJAAIAAAABAA0AAgAJAAIAAAABAA4AAgAJAAIAAAABAA8AAgAJAAIAAAABABAAAgAJAAIAAAABABEAAgAJAAIAAAABABIAAgAJAAIAAAABABMAAgAJAAIAAAABABQAAgAJAAIAAAABABUAAgAJAAIAAAABABYAAgAJAAIAAAABABcAAgAJAAIAAAACAAAAAgAJAAIAAAACAAEAAgAJAAIAAAACAAIAAgAJAAIAAAACAAMAAgAJAAIAAAACAAQAAgAJAAIAAAACAAUAAgAJAAIAAAACAAYAAgAJAAIAAAACAAcAAgAJAAIAAAACAAgAAgAJAAIAAAACAAkAAgAJAAIAAAACAAoAAgAJAAIAAAACAAsAAgAJAAIAAAACAAwAAgAJAAIAAAACAA0AAgAJAAIAAAACAA4AAgAJAAIAAAACAA8AAgAJAAIAAAACABAAAgAJAAIAAAACABEAAgAJAAIAAAACABIAAgAJAAIAAAACABMAAgAJAAIAAAACABQAAgAJAAIAAAACABUAAgAJAAIAAAACABYAAgAJAAIAAAACABcAAgAJAAIAAAADAAAAAgAJAAIAAAADAAEAAgAJAAIAAAADAAIAAgAJAAIAAAADAAMAAgAJAAIAAAADAAQAAgAJAAIAAAADAAUAAgAJAAIAAAADAAYAAgAJAAIAAAADAAcAAgAJAAIAAAADAAgAAgAJAAIAAAADAAkAAgAJAAIAAAADAAoAAgAJAAIAAAADAAsAAgAJAAIAAAADAAwAAgAJAAIAAAADAA0AAgAJAAIAAAADAA4AAgAJAAIAAAADAA8AAgAJAAIAAAADABAAAgAJAAIAAAADABEAAgAJAAIAAAADABIAAgAJAAIAAAADABMAAgAJAAIAAAADABQAAgAJAAIAAAADABUAAgAJAAIAAAADABYAAgAJAAIAAAADABcAAgAJAAIAAAAEAAAAAgAJAAIAAAAEAAEAAgAJAAIAAAAEAAIAAgAJAAIAAAAEAAMAAgAJAAIAAAAEAAQAAgAJAAIAAAAEAAUAAgAJAAIAAAAEAAYAAgAJAAIAAAAEAAcAAgAJAAIAAAAEAAgAAgAJAAIAAAAEAAkAAgAJAAIAAAAEAAoAAgAJAAIAAAAEAAsAAgAJAAIAAAAEAAwAAgAJAAIAAAAEAA0AAgAJAAIAAAAEAA4AAgAJAAIAAAAEAA8AAgAJAAIAAAAEABAAAgAJAAIAAAAEABEAAgAJAAIAAAAEABIAAgAJAAIAAAAEABMAAgAJAAIAAAAEABQAAgAJAAIAAAAEABUAAgAJAAIAAAAEABYAAgAJAAIAAAAEABcAAgAJAAIAAAAFAAAAAgAJAAIAAAAFAAEAAgAJAAIAAAAFAAIAAgAJAAIAAAAFAAMAAgAJAAIAAAAFAAQAAgAJAAIAAAAFAAUAAgAJAAIAAAAFAAYAAgAJAAIAAAAFAAcAAgAJAAIAAAAFAAgAAgAJAAIAAAAFAAkAAgAJAAIAAAAFAAoAAgAJAAIAAAAFAAsAAgAJAAIAAAAFAAwAAgAJAAIAAAAFAA0AAgAJAAIAAAAFAA4AAgAJAAIAAAAFAA8AAgAJAAIAAAAFABAAAgAJAAIAAAAFABEAAgAJAAIAAAAFABIAAgAJAAIAAAAFABMAAgAJAAIAAAAFABQAAgAJAAIAAAAFABUAAgAJAAIAAAAFABYAAgAJAAIAAAAFABcAAgAJAAIAAAAGAAAAAgAJAAIAAAAGAAEAAgAJAAIAAAAGAAIAAgAJAAIAAAAGAAMAAgAJAAIAAAAGAAQAAgAJAAIAAAAGAAUAAgAJAAIAAAAGAAYAAgAJAAIAAAAGAAcAAgAJAAIAAAAGAAgAAgAJAAIAAAAGAAkAAgAJAAIAAAAGAAoAAgAJAAIAAAAGAAsAAgAJAAIAAAAGAAwAAgAJAAIAAAAGAA0AAgAJAAIAAAAGAA4AAgAJAAIAAAAGAA8AAgAJAAIAAAAGABAAAgAJAAIAAAAGABEAAgAJAAIAAAAGABIAAgAJAAIAAAAGABMAAgAJAAIAAAAGABQAAgAJAAIAAAAGABUAAgAJAAIAAAAGABYAAgAJAAIAAAAGABcAAgAJAAIAAAAHAAAAAgAJAAIAAAAHAAEAAgAJAAIAAAAHAAIAAgAJAAIAAAAHAAMAAgAJAAIAAAAHAAQAAgAJAAIAAAAHAAUAAgAJAAIAAAAHAAYAAgAJAAIAAAAHAAcAAgAJAAIAAAAHAAgAAgAJAAIAAAAHAAkAAgAJAAIAAAAHAAoAAgAJAAIAAAAHAAsAAgAJAAIAAAAHAAwAAgAJAAIAAAAHAA0AAgAJAAIAAAAHAA4AAgAJAAIAAAAHAA8AAgAJAAIAAAAHABAAAgAJAAIAAAAHABEAAgAJAAIAAAAHABIAAgAJAAIAAAAHABMAAgAJAAIAAAAHABQAAgAJAAIAAAAHABUAAgAJAAIAAAAHABYAAgAJAAIAAAAHABcAAgAJAAIAAAAIAAAAAgAJAAIAAAAIAAEAAgAJAAIAAAAIAAIAAgAJAAIAAAAIAAMAAgAJAAIAAAAIAAQAAgAJAAIAAAAIAAUAAgAJAAIAAAAIAAYAAgAJAAIAAAAIAAcAAgAJAAIAAAAIAAgAAgAJAAIAAAAIAAkAAgAJAAIAAAAIAAoAAgAJAAIAAAAIAAsAAgAJAAIAAAAIAAwAAgAJAAIAAAAIAA0AAgAJAAIAAAAIAA4AAgAJAAIAAAAIAA8AAgAJAAIAAAAIABAAAgAJAAIAAAAIABEAAgAJAAIAAAAIABIAAgAJAAIAAAAIABMAAgAJAAIAAAAIABQAAgAJAAIAAAAIABUAAgAJAAIAAAAIABYAAgAJAAIAAAAIABcAAgAJAAIAAAAJAAAAAgAJAAIAAAAJAAEAAgAJAAIAAAAJAAIAAgAJAAIAAAAJAAMAAgAJAAIAAAAJAAQAAgAJAAIAAAAJAAUAAgAJAAIAAAAJAAYAAgAJAAIAAAAJAAcAAgAJAAIAAAAJAAgAAgAJAAIAAAAJAAkAAgAJAAIAAAAJAAoAAgAJAAIAAAAJAAsAAgAJAAIAAAAJAAwAAgAJAAIAAAAJAA0AAgAJAAIAAAAJAA4AAgAJAAIAAAAJAA8AAgAJAAIAAAAJABAAAgAJAAIAAAAJABEAAgAJAAIAAAAJABIAAgAJAAIAAAAJABMAAgAJAAIAAAAJABQAAgAJAAIAAAAJABUAAgAJAAIAAAAJABYAAgAJAAIAAAAJABcAAgAJAAIAAAAKAAAAAgAJAAIAAAAKAAEAAgAJAAIAAAAKAAIAAgAJAAIAAAAKAAMAAgAJAAIAAAAKAAQAAgAJAAIAAAAKAAUAAgAJAAIAAAAKAAYAAgAJAAIAAAAKAAcAAgAJAAIAAAAKAAgAAgAJAAIAAAAKAAkAAgAJAAIAAAAKAAoAAgAJAAIAAAAKAAsAAgAJAAIAAAAKAAwAAgAJAAIAAAAKAA0AAgAJAAIAAAAKAA4AAgAJAAIAAAAKAA8AAgAJAAIAAAAKABAAAgAJAAIAAAAKABEAAgAJAAIAAAAKABIAAgAJAAIAAAAKABMAAgAJAAIAAAAKABQAAgAJAAIAAAAKABUAAgAJAAIAAAAKABYAAgAJAAIAAAAKABcAAgAJAAIAAAALAAAAAgAJAAIAAAALAAEAAgAJAAIAAAALAAIAAgAJAAIAAAALAAMAAgAJAAIAAAALAAQAAgAJAAIAAAALAAUAAgAJAAIAAAALAAYAAgAJAAIAAAALAAcAAgAJAAIAAAALAAgAAgAJAAIAAAALAAkAAgAJAAIAAAALAAoAAgAJAAIAAAALAAsAAgAJAAIAAAALAAwAAgAJAAIAAAALAA0AAgAJAAIAAAALAA4AAgAJAAIAAAALAA8AAgAJAAIAAAALABAAAgAJAAIAAAALABEAAgAJAAIAAAALABIAAgAJAAIAAAALABMAAgAJAAIAAAALABQAAgAJAAIAAAALABUAAgAJAAIAAAALABYAAgAJAAIAAAALABcAAgAJAAIAAAAMAAAAAgAJAAIAAAAMAAEAAgAJAAIAAAAMAAIAAgAJAAIAAAAMAAMAAgAJAAIAAAAMAAQAAgAJAAIAAAAMAAUAAgAJAAIAAAAMAAYAAgAJAAIAAAAMAAcAAgAJAAIAAAAMAAgAAgAJAAIAAAAMAAkAAgAJAAIAAAAMAAoAAgAJAAIAAAAMAAsAAgAJAAIAAAAMAAwAAgAJAAIAAAAMAA0AAgAJAAIAAAAMAA4AAgAJAAIAAAAMAA8AAgAJAAIAAAAMABAAAgAJAAIAAAAMABEAAgAJAAIAAAAMABIAAgAJAAIAAAAMABMAAgAJAAIAAAAMABQAAgAJAAIAAAAMABUAAgAJAAIAAAAMABYAAgAJAAIAAAAMABcAAgAJAAIAAAANAAAAAgAJAAIAAAANAAEAAgAJAAIAAAANAAIAAgAJAAIAAAANAAMAAgAJAAIAAAANAAQAAgAJAAIAAAANAAUAAgAJAAIAAAANAAYAAgAJAAIAAAANAAcAAgAJAAIAAAANAAgAAgAJAAIAAAANAAkAAgAJAAIAAAANAAoAAgAJAAIAAAANAAsAAgAJAAIAAAANAAwAAgAJAAIAAAANAA0AAgAJAAIAAAANAA4AAgAJAAIAAAANAA8AAgAJAAIAAAANABAAAgAJAAIAAAANABEAAgAJAAIAAAANABIAAgAJAAIAAAANABMAAgAJAAIAAAANABQAAgAJAAIAAAANABUAAgAJAAIAAAANABYAAgAJAAIAAAANABcAAgAJAAIAAAAOAAAAAgAJAAIAAAAOAAEAAgAJAAIAAAAOAAIAAgAJAAIAAAAOAAMAAgAJAAIAAAAOAAQAAgAJAAIAAAAOAAUAAgAJAAIAAAAOAAYAAgAJAAIAAAAOAAcAAgAJAAIAAAAOAAgAAgAJAAIAAAAOAAkAAgAJAAIAAAAOAAoAAgAJAAIAAAAOAAsAAgAJAAIAAAAOAAwAAgAJAAIAAAAOAA0AAgAJAAIAAAAOAA4AAgAJAAIAAAAOAA8AAgAJAAIAAAAOABAAAgAJAAIAAAAOABEAAgAJAAIAAAAOABIAAgAJAAIAAAAOABMAAgAJAAIAAAAOABQAAgAJAAIAAAAOABUAAgAJAAIAAAAOABYAAgAJAAIAAAAOABcAAgAJAAIAAAAPAAAAAgAJAAIAAAAPAAEAAgAJAAIAAAAPAAIAAgAJAAIAAAAPAAMAAgAJAAIAAAAPAAQAAgAJAAIAAAAPAAUAAgAJAAIAAAAPAAYAAgAJAAIAAAAPAAcAAgAJAAIAAAAPAAgAAgAJAAIAAAAPAAkAAgAJAAIAAAAPAAoAAgAJAAIAAAAPAAsAAgAJAAIAAAAPAAwAAgAJAAIAAAAPAA0AAgAJAAIAAAAPAA4AAgAJAAIAAAAPAA8AAgAJAAIAAAAPABAAAgAJAAIAAAAPABEAAgAJAAIAAAAPABIAAgAJAAIAAAAPABMAAgAJAAIAAAAPABQAAgAJAAIAAAAPABUAAgAJAAIAAAAPABYAAgAJAAIAAAAPABcAAgAJAAIAAAAQAAAAAgAJAAIAAAAQAAEAAgAJAAIAAAAQAAIAAgAJAAIAAAAQAAMAAgAJAAIAAAAQAAQAAgAJAAIAAAAQAAUAAgAJAAIAAAAQAAYAAgAJAAIAAAAQAAcAAgAJAAIAAAAQAAgAAgAJAAIAAAAQAAkAAgAJAAIAAAAQAAoAAgAJAAIAAAAQAAsAAgAJAAIAAAAQAAwAAgAJAAIAAAAQAA0AAgAJAAIAAAAQAA4AAgAJAAIAAAAQAA8AAgAJAAIAAAAQABAAAgAJAAIAAAAQABEAAgAJAAIAAAAQABIAAgAJAAIAAAAQABMAAgAJAAIAAAAQABQAAgAJAAIAAAAQABUAAgAJAAIAAAAQABYAAgAJAAIAAAAQABcAAgAJAAIAAAARAAAAAgAJAAIAAAARAAEAAgAJAAIAAAARAAIAAgAJAAIAAAARAAMAAgAJAAIAAAARAAQAAgAJAAIAAAARAAUAAgAJAAIAAAARAAYAAgAJAAIAAAARAAcAAgAJAAIAAAARAAgAAgAJAAIAAAARAAkAAgAJAAIAAAARAAoAAgAJAAIAAAARAAsAAgAJAAIAAAARAAwAAgAJAAIAAAARAA0AAgAJAAIAAAARAA4AAgAJAAIAAAARAA8AAgAJAAIAAAARABAAAgAJAAIAAAARABEAAgAJAAIAAAARABIAAgAJAAIAAAARABMAAgAJAAIAAAARABQAAgAJAAIAAAARABUAAgAJAAIAAAARABYAAgAJAAIAAAARABcAAgAJAAIAAAASAAAAAgAJAAIAAAASAAEAAgAJAAIAAAASAAIAAgAJAAIAAAASAAMAAgAJAAIAAAASAAQAAgAJAAIAAAASAAUAAgAJAAIAAAASAAYAAgAJAAIAAAASAAcAAgAJAAIAAAASAAgAAgAJAAIAAAASAAkAAgAJAAIAAAASAAoAAgAJAAIAAAASAAsAAgAJAAIAAAASAAwAAgAJAAIAAAASAA0AAgAJAAIAAAASAA4AAgAJAAIAAAASAA8AAgAJAAIAAAASABAAAgAJAAIAAAASABEAAgAJAAIAAAASABIAAgAJAAIAAAASABMAAgAJAAIAAAASABQAAgAJAAIAAAASABUAAgAJAAIAAAASABYAAgAJAAIAAAASABcAAgAJAAIAAAATAAAAAgAJAAIAAAATAAEAAgAJAAIAAAATAAIAAgAJAAIAAAATAAMAAgAJAAIAAAATAAQAAgAJAAIAAAATAAUAAgAJAAIAAAATAAYAAgAJAAIAAAATAAcAAgAJAAIAAAATAAgAAgAJAAIAAAATAAkAAgAJAAIAAAATAAoAAgAJAAIAAAATAAsAAgAJAAIAAAATAAwAAgAJAAIAAAATAA0AAgAJAAIAAAATAA4AAgAJAAIAAAATAA8AAgAJAAIAAAATABAAAgAJAAIAAAATABEAAgAJAAIAAAATABIAAgAJAAIAAAATABMAAgAJAAIAAAATABQAAgAJAAIAAAATABUAAgAJAAIAAAATABYAAgAJAAIAAAATABcAAgAJAAIAAAAUAAAAAgAJAAIAAAAUAAEAAgAJAAIAAAAUAAIAAgAJAAIAAAAUAAMAAgAJAAIAAAAUAAQAAgAJAAIAAAAUAAUAAgAJAAIAAAAUAAYAAgAJAAIAAAAUAAcAAgAJAAIAAAAUAAgAAgAJAAIAAAAUAAkAAgAJAAIAAAAUAAoAAgAJAAIAAAAUAAsAAgAJAAIAAAAUAAwAAgAJAAIAAAAUAA0AAgAJAAIAAAAUAA4AAgAJAAIAAAAUAA8AAgAJAAIAAAAUABAAAgAJAAIAAAAUABEAAgAJAAIAAAAUABIAAgAJAAIAAAAUABMAAgAJAAIAAAAUABQAAgAJAAIAAAAUABUAAgAJAAIAAAAUABYAAgAJAAIAAAAUABcAAgAJAAIAAAAVAAAAAgAJAAIAAAAVAAEAAgAJAAIAAAAVAAIAAgAJAAIAAAAVAAMAAgAJAAIAAAAVAAQAAgAJAAIAAAAVAAUAAgAJAAIAAAAVAAYAAgAJAAIAAAAVAAcAAgAJAAIAAAAVAAgAAgAJAAIAAAAVAAkAAgAJAAIAAAAVAAoAAgAJAAIAAAAVAAsAAgAJAAIAAAAVAAwAAgAJAAIAAAAVAA0AAgAJAAIAAAAVAA4AAgAJAAIAAAAVAA8AAgAJAAIAAAAVABAAAgAJAAIAAAAVABEAAgAJAAIAAAAVABIAAgAJAAIAAAAVABMAAgAJAAIAAAAVABQAAgAJAAIAAAAVABUAAgAJAAIAAAAVABYAAgAJAAIAAAAVABcAAgAJAAIAAAAWAAAAAgAJAAIAAAAWAAEAAgAJAAIAAAAWAAIAAgAJAAIAAAAWAAMAAgAJAAIAAAAWAAQAAgAJAAIAAAAWAAUAAgAJAAIAAAAWAAYAAgAJAAIAAAAWAAcAAgAJAAIAAAAWAAgAAgAJAAIAAAAWAAkAAgAJAAIAAAAWAAoAAgAJAAIAAAAWAAsAAgAJAAIAAAAWAAwAAgAJAAIAAAAWAA0AAgAJAAIAAAAWAA4AAgAJAAIAAAAWAA8AAgAJAAIAAAAWABAAAgAJAAIAAAAWABEAAgAJAAIAAAAWABIAAgAJAAIAAAAWABMAAgAJAAIAAAAWABQAAgAJAAIAAAAWABUAAgAJAAIAAAAWABYAAgAJAAIAAAAWABcAAgAJAAIAAAAXAAAAAgAJAAIAAAAXAAEAAgAJAAIAAAAXAAIAAgAJAAIAAAAXAAMAAgAJAAIAAAAXAAQAAgAJAAIAAAAXAAUAAgAJAAIAAAAXAAYAAgAJAAIAAAAXAAcAAgAJAAIAAAAXAAgAAgAJAAIAAAAXAAkAAgAJAAIAAAAXAAoAAgAJAAIAAAAXAAsAAgAJAAIAAAAXAAwAAgAJAAIAAAAXAA0AAgAJAAIAAAAXAA4AAgAJAAIAAAAXAA8AAgAJAAIAAAAXABAAAgAJAAIAAAAXABEAAgAJAAIAAAAXABIAAgAJAAIAAAAXABMAAgAJAAIAAAAXABQAAgAJAAIAAAAXABUAAgAJAAIAAAAXABYAAgAJAAIAAAAXABcAAgAJAAIAAAAAABgAAgAJAAIAAAAAABkAAgAJAAIAAAAAABoAAgAJAAIAAAAAABsAAgAJAAIAAAAAABwAAgAJAAIAAAAAAB0AAgAJAAIAAAAAAB4AAgAJAAIAAAAAAB8AAgAJAAIAAAABABgAAgAJAAIAAAABABkAAgAJAAIAAAABABoAAgAJAAIAAAABABsAAgAJAAIAAAABABwAAgAJAAIAAAABAB0AAgAJAAIAAAABAB4AAgAJAAIAAAABAB8AAgAJAAIAAAACABgAAgAJAAIAAAACABkAAgAJAAIAAAACABoAAgAJAAIAAAACABsAAgAJAAIAAAACABwAAgAJAAIAAAACAB0AAgAJAAIAAAACAB4AAgAJAAIAAAACAB8AAgAJAAIAAAADABgAAgAJAAIAAAADABkAAgAJAAIAAAADABoAAgAJAAIAAAADABsAAgAJAAIAAAADABwAAgAJAAIAAAADAB0AAgAJAAIAAAADAB4AAgAJAAIAAAADAB8AAgAJAAIAAAAEABgAAgAJAAIAAAAEABkAAgAJAAIAAAAEABoAAgAJAAIAAAAEABsAAgAJAAIAAAAEABwAAgAJAAIAAAAEAB0AAgAJAAIAAAAEAB4AAgAJAAIAAAAEAB8AAgAJAAIAAAAFABgAAgAJAAIAAAAFABkAAgAJAAIAAAAFABoAAgAJAAIAAAAFABsAAgAJAAIAAAAFABwAAgAJAAIAAAAFAB0AAgAJAAIAAAAFAB4AAgAJAAIAAAAFAB8AAgAJAAIAAAAGABgAAgAJAAIAAAAGABkAAgAJAAIAAAAGABoAAgAJAAIAAAAGABsAAgAJAAIAAAAGABwAAgAJAAIAAAAGAB0AAgAJAAIAAAAGAB4AAgAJAAIAAAAGAB8AAgAJAAIAAAAHABgAAgAJAAIAAAAHABkAAgAJAAIAAAAHABoAAgAJAAIAAAAHABsAAgAJAAIAAAAHABwAAgAJAAIAAAAHAB0AAgAJAAIAAAAHAB4AAgAJAAIAAAAHAB8AAgAJAAIAAAAIABgAAgAJAAIAAAAIABkAAgAJAAIAAAAIABoAAgAJAAIAAAAIABsAAgAJAAIAAAAIABwAAgAJAAIAAAAIAB0AAgAJAAIAAAAIAB4AAgAJAAIAAAAIAB8AAgAJAAIAAAAJABgAAgAJAAIAAAAJABkAAgAJAAIAAAAJABoAAgAJAAIAAAAJABsAAgAJAAIAAAAJABwAAgAJAAIAAAAJAB0AAgAJAAIAAAAJAB4AAgAJAAIAAAAJAB8AAgAJAAIAAAAKABgAAgAJAAIAAAAKABkAAgAJAAIAAAAKABoAAgAJAAIAAAAKABsAAgAJAAIAAAAKABwAAgAJAAIAAAAKAB0AAgAJAAIAAAAKAB4AAgAJAAIAAAAKAB8AAgAJAAIAAAALABgAAgAJAAIAAAALABkAAgAJAAIAAAALABoAAgAJAAIAAAALABsAAgAJAAIAAAALABwAAgAJAAIAAAALAB0AAgAJAAIAAAALAB4AAgAJAAIAAAALAB8AAgAJAAIAAAAMABgAAgAJAAIAAAAMABkAAgAJAAIAAAAMABoAAgAJAAIAAAAMABsAAgAJAAIAAAAMABwAAgAJAAIAAAAMAB0AAgAJAAIAAAAMAB4AAgAJAAIAAAAMAB8AAgAJAAIAAAANABgAAgAJAAIAAAANABkAAgAJAAIAAAANABoAAgAJAAIAAAANABsAAgAJAAIAAAANABwAAgAJAAIAAAANAB0AAgAJAAIAAAANAB4AAgAJAAIAAAANAB8AAgAJAAIAAAAOABgAAgAJAAIAAAAOABkAAgAJAAIAAAAOABoAAgAJAAIAAAAOABsAAgAJAAIAAAAOABwAAgAJAAIAAAAOAB0AAgAJAAIAAAAOAB4AAgAJAAIAAAAOAB8AAgAJAAIAAAAPABgAAgAJAAIAAAAPABkAAgAJAAIAAAAPABoAAgAJAAIAAAAPABsAAgAJAAIAAAAPABwAAgAJAAIAAAAPAB0AAgAJAAIAAAAPAB4AAgAJAAIAAAAPAB8AAgAJAAIAAAAQABgAAgAJAAIAAAAQABkAAgAJAAIAAAAQABoAAgAJAAIAAAAQABsAAgAJAAIAAAAQABwAAgAJAAIAAAAQAB0AAgAJAAIAAAAQAB4AAgAJAAIAAAAQAB8AAgAJAAIAAAARABgAAgAJAAIAAAARABkAAgAJAAIAAAARABoAAgAJAAIAAAARABsAAgAJAAIAAAARABwAAgAJAAIAAAARAB0AAgAJAAIAAAARAB4AAgAJAAIAAAARAB8AAgAJAAIAAAASABgAAgAJAAIAAAASABkAAgAJAAIAAAASABoAAgAJAAIAAAASABsAAgAJAAIAAAASABwAAgAJAAIAAAASAB0AAgAJAAIAAAASAB4AAgAJAAIAAAASAB8AAgAJAAIAAAATABgAAgAJAAIAAAATABkAAgAJAAIAAAATABoAAgAJAAIAAAATABsAAgAJAAIAAAATABwAAgAJAAIAAAATAB0AAgAJAAIAAAATAB4AAgAJAAIAAAATAB8AAgAJAAIAAAAUABgAAgAJAAIAAAAUABkAAgAJAAIAAAAUABoAAgAJAAIAAAAUABsAAgAJAAIAAAAUABwAAgAJAAIAAAAUAB0AAgAJAAIAAAAUAB4AAgAJAAIAAAAUAB8AAgAJAAIAAAAVABgAAgAJAAIAAAAVABkAAgAJAAIAAAAVABoAAgAJAAIAAAAVABsAAgAJAAIAAAAVABwAAgAJAAIAAAAVAB0AAgAJAAIAAAAVAB4AAgAJAAIAAAAVAB8AAgAJAAIAAAAWABgAAgAJAAIAAAAWABkAAgAJAAIAAAAWABoAAgAJAAIAAAAWABsAAgAJAAIAAAAWABwAAgAJAAIAAAAWAB0AAgAJAAIAAAAWAB4AAgAJAAIAAAAWAB8AAgAJAAIAAAAXABgAAgAJAAIAAAAXABkAAgAJAAIAAAAXABoAAgAJAAIAAAAXABsAAgAJAAIAAAAXABwAAgAJAAIAAAAXAB0AAgAJAAIAAAAXAB4AAgAJAAIAAAAXAB8AAgAJAAIAAAAYAAAAAgAJAAIAAAAYAAEAAgAJAAIAAAAYAAIAAgAJAAIAAAAYAAMAAgAJAAIAAAAYAAQAAgAJAAIAAAAYAAUAAgAJAAIAAAAYAAYAAgAJAAIAAAAYAAcAAgAJAAIAAAAYAAgAAgAJAAIAAAAYAAkAAgAJAAIAAAAYAAoAAgAJAAIAAAAYAAsAAgAJAAIAAAAYAAwAAgAJAAIAAAAYAA0AAgAJAAIAAAAYAA4AAgAJAAIAAAAYAA8AAgAJAAIAAAAYABAAAgAJAAIAAAAYABEAAgAJAAIAAAAYABIAAgAJAAIAAAAYABMAAgAJAAIAAAAYABQAAgAJAAIAAAAYABUAAgAJAAIAAAAYABYAAgAJAAIAAAAYABcAAgAJAAIAAAAYABgAAgAJAAIAAAAYABkAAgAJAAIAAAAYABoAAgAJAAIAAAAYABsAAgAJAAIAAAAYABwAAgAJAAIAAAAYAB0AAgAJAAIAAAAYAB4AAgAJAAIAAAAYAB8AAgAJAAIAAAAZAAAAAgAJAAIAAAAZAAEAAgAJAAIAAAAZAAIAAgAJAAIAAAAZAAMAAgAJAAIAAAAZAAQAAgAJAAIAAAAZAAUAAgAJAAIAAAAZAAYAAgAJAAIAAAAZAAcAAgAJAAIAAAAZAAgAAgAJAAIAAAAZAAkAAgAJAAIAAAAZAAoAAgAJAAIAAAAZAAsAAgAJAAIAAAAZAAwAAgAJAAIAAAAZAA0AAgAJAAIAAAAZAA4AAgAJAAIAAAAZAA8AAgAJAAIAAAAZABAAAgAJAAIAAAAZABEAAgAJAAIAAAAZABIAAgAJAAIAAAAZABMAAgAJAAIAAAAZABQAAgAJAAIAAAAZABUAAgAJAAIAAAAZABYAAgAJAAIAAAAZABcAAgAJAAIAAAAZABgAAgAJAAIAAAAZABkAAgAJAAIAAAAZABoAAgAJAAIAAAAZABsAAgAJAAIAAAAZABwAAgAJAAIAAAAZAB0AAgAJAAIAAAAZAB4AAgAJAAIAAAAZAB8AAgAJAAIAAAAaAAAAAgAJAAIAAAAaAAEAAgAJAAIAAAAaAAIAAgAJAAIAAAAaAAMAAgAJAAIAAAAaAAQAAgAJAAIAAAAaAAUAAgAJAAIAAAAaAAYAAgAJAAIAAAAaAAcAAgAJAAIAAAAaAAgAAgAJAAIAAAAaAAkAAgAJAAIAAAAaAAoAAgAJAAIAAAAaAAsAAgAJAAIAAAAaAAwAAgAJAAIAAAAaAA0AAgAJAAIAAAAaAA4AAgAJAAIAAAAaAA8AAgAJAAIAAAAaABAAAgAJAAIAAAAaABEAAgAJAAIAAAAaABIAAgAJAAIAAAAaABMAAgAJAAIAAAAaABQAAgAJAAIAAAAaABUAAgAJAAIAAAAaABYAAgAJAAIAAAAaABcAAgAJAAIAAAAaABgAAgAJAAIAAAAaABkAAgAJAAIAAAAaABoAAgAJAAIAAAAaABsAAgAJAAIAAAAaABwAAgAJAAIAAAAaAB0AAgAJAAIAAAAaAB4AAgAJAAIAAAAaAB8AAgAJAAIAAAAbAAAAAgAJAAIAAAAbAAEAAgAJAAIAAAAbAAIAAgAJAAIAAAAbAAMAAgAJAAIAAAAbAAQAAgAJAAIAAAAbAAUAAgAJAAIAAAAbAAYAAgAJAAIAAAAbAAcAAgAJAAIAAAAbAAgAAgAJAAIAAAAbAAkAAgAJAAIAAAAbAAoAAgAJAAIAAAAbAAsAAgAJAAIAAAAbAAwAAgAJAAIAAAAbAA0AAgAJAAIAAAAbAA4AAgAJAAIAAAAbAA8AAgAJAAIAAAAbABAAAgAJAAIAAAAbABEAAgAJAAIAAAAbABIAAgAJAAIAAAAbABMAAgAJAAIAAAAbABQAAgAJAAIAAAAbABUAAgAJAAIAAAAbABYAAgAJAAIAAAAbABcAAgAJAAIAAAAbABgAAgAJAAIAAAAbABkAAgAJAAIAAAAbABoAAgAJAAIAAAAbABsAAgAJAAIAAAAbABwAAgAJAAIAAAAbAB0AAgAJAAIAAAAbAB4AAgAJAAIAAAAbAB8AAgAJAAIAAAAcAAAAAgAJAAIAAAAcAAEAAgAJAAIAAAAcAAIAAgAJAAIAAAAcAAMAAgAJAAIAAAAcAAQAAgAJAAIAAAAcAAUAAgAJAAIAAAAcAAYAAgAJAAIAAAAcAAcAAgAJAAIAAAAcAAgAAgAJAAIAAAAcAAkAAgAJAAIAAAAcAAoAAgAJAAIAAAAcAAsAAgAJAAIAAAAcAAwAAgAJAAIAAAAcAA0AAgAJAAIAAAAcAA4AAgAJAAIAAAAcAA8AAgAJAAIAAAAcABAAAgAJAAIAAAAcABEAAgAJAAIAAAAcABIAAgAJAAIAAAAcABMAAgAJAAIAAAAcABQAAgAJAAIAAAAcABUAAgAJAAIAAAAcABYAAgAJAAIAAAAcABcAAgAJAAIAAAAcABgAAgAJAAIAAAAcABkAAgAJAAIAAAAcABoAAgAJAAIAAAAcABsAAgAJAAIAAAAcABwAAgAJAAIAAAAcAB0AAgAJAAIAAAAcAB4AAgAJAAIAAAAcAB8AAgAJAAIAAAAdAAAAAgAJAAIAAAAdAAEAAgAJAAIAAAAdAAIAAgAJAAIAAAAdAAMAAgAJAAIAAAAdAAQAAgAJAAIAAAAdAAUAAgAJAAIAAAAdAAYAAgAJAAIAAAAdAAcAAgAJAAIAAAAdAAgAAgAJAAIAAAAdAAkAAgAJAAIAAAAdAAoAAgAJAAIAAAAdAAsAAgAJAAIAAAAdAAwAAgAJAAIAAAAdAA0AAgAJAAIAAAAdAA4AAgAJAAIAAAAdAA8AAgAJAAIAAAAdABAAAgAJAAIAAAAdABEAAgAJAAIAAAAdABIAAgAJAAIAAAAdABMAAgAJAAIAAAAdABQAAgAJAAIAAAAdABUAAgAJAAIAAAAdABYAAgAJAAIAAAAdABcAAgAJAAIAAAAdABgAAgAJAAIAAAAdABkAAgAJAAIAAAAdABoAAgAJAAIAAAAdABsAAgAJAAIAAAAdABwAAgAJAAIAAAAdAB0AAgAJAAIAAAAdAB4AAgAJAAIAAAAdAB8AAgAJAAIAAAAeAAAAAgAJAAIAAAAeAAEAAgAJAAIAAAAeAAIAAgAJAAIAAAAeAAMAAgAJAAIAAAAeAAQAAgAJAAIAAAAeAAUAAgAJAAIAAAAeAAYAAgAJAAIAAAAeAAcAAgAJAAIAAAAeAAgAAgAJAAIAAAAeAAkAAgAJAAIAAAAeAAoAAgAJAAIAAAAeAAsAAgAJAAIAAAAeAAwAAgAJAAIAAAAeAA0AAgAJAAIAAAAeAA4AAgAJAAIAAAAeAA8AAgAJAAIAAAAeABAAAgAJAAIAAAAeABEAAgAJAAIAAAAeABIAAgAJAAIAAAAeABMAAgAJAAIAAAAeABQAAgAJAAIAAAAeABUAAgAJAAIAAAAeABYAAgAJAAIAAAAeABcAAgAJAAIAAAAeABgAAgAJAAIAAAAeABkAAgAJAAIAAAAeABoAAgAJAAIAAAAeABsAAgAJAAIAAAAeABwAAgAJAAIAAAAeAB0AAgAJAAIAAAAeAB4AAgAJAAIAAAAeAB8AAgAJAAIAAAAfAAAAAgAJAAIAAAAfAAEAAgAJAAIAAAAfAAIAAgAJAAIAAAAfAAMAAgAJAAIAAAAfAAQAAgAJAAIAAAAfAAUAAgAJAAIAAAAfAAYAAgAJAAIAAAAfAAcAAgAJAAIAAAAfAAgAAgAJAAIAAAAfAAkAAgAJAAIAAAAfAAoAAgAJAAIAAAAfAAsAAgAJAAIAAAAfAAwAAgAJAAIAAAAfAA0AAgAJAAIAAAAfAA4AAgAJAAIAAAAfAA8AAgAJAAIAAAAfABAAAgAJAAIAAAAfABEAAgAJAAIAAAAfABIAAgAJAAIAAAAfABMAAgAJAAIAAAAfABQAAgAJAAIAAAAfABUAAgAJAAIAAAAfABYAAgAJAAIAAAAfABcAAgAJAAIAAAAfABgAAgAJAAIAAAAfABkAAgAJAAIAAAAfABoAAgAJAAIAAAAfABsAAgAJAAIAAAAfABwAAgAJAAIAAAAfAB0AAgAJAAIAAAAfAB4AAgAJAAIAAAAfAB8AAgAJAAIAAAA=")
tile_set = ExtResource("5_x2dxf")

[node name="LandLayer" type="TileMapLayer" parent="Tilemap"]
unique_name_in_owner = true
tile_map_data = PackedByteArray("AAAcABsAAAALAAMAAAAcABoAAAALAAIAAAAcABkAAAALAAAAAAAbABwAAAALAAMAAAAbABsAAAAGAAIAAAAbABoAAAAJAAIAAAAbABkAAAAJAAAAAAAbABgAAAAAAAAAAAAaABwAAAAIAAMAAAAaABsAAAAFAAIAAAAaABoAAAAJAAIAAAAaABkAAAAKAAAAAAAZABsAAAAIAAMAAAAZABoAAAAIAAEAAAAZABkAAAAIAAAAAAAVABsAAAALAAMAAAAVABoAAAALAAAAAAAVABEAAAADAAMAAAAUABwAAAALAAMAAAAUABsAAAAGAAIAAAAUABoAAAAKAAAAAAAUABIAAAALAAMAAAAUABEAAAALAAEAAAAUABAAAAALAAIAAAAUAA8AAAALAAAAAAATABwAAAAJAAMAAAATABsAAAAJAAIAAAATABoAAAAGAAEAAAATABkAAAALAAIAAAATABgAAAALAAIAAAATABcAAAALAAAAAAATABMAAAALAAMAAAATABIAAAAGAAIAAAATABEAAAAJAAIAAAATABAAAAAJAAIAAAATAA8AAAAKAAAAAAASAB0AAAALAAMAAAASABwAAAAGAAIAAAASABsAAAAJAAIAAAASABoAAAAJAAIAAAASABkAAAAJAAIAAAASABgAAAAJAAIAAAASABcAAAAGAAEAAAASABYAAAALAAIAAAASABUAAAALAAIAAAASABQAAAALAAIAAAASABMAAAAGAAIAAAASABIAAAAJAAIAAAASABEAAAAJAAIAAAASABAAAAAJAAIAAAASAA8AAAAGAAEAAAASAA4AAAALAAAAAAARAB0AAAAJAAMAAAARABwAAAAJAAIAAAARABsAAAAJAAIAAAARABoAAAAJAAIAAAARABkAAAAJAAIAAAARABgAAAAJAAIAAAARABcAAAAJAAIAAAARABYAAAAJAAIAAAARABUAAAAJAAIAAAARABQAAAAJAAIAAAARABMAAAAJAAIAAAARABIAAAAJAAIAAAARABEAAAAJAAIAAAARABAAAAAJAAIAAAARAA8AAAAJAAIAAAARAA4AAAAGAAEAAAARAA0AAAALAAAAAAAQAB0AAAAJAAMAAAAQABwAAAAJAAIAAAAQABsAAAAJAAIAAAAQABoAAAAJAAIAAAAQABkAAAAJAAIAAAAQABgAAAAJAAIAAAAQABcAAAAJAAIAAAAQABYAAAAJAAIAAAAQABUAAAAJAAIAAAAQABQAAAAJAAIAAAAQABMAAAAJAAIAAAAQABIAAAAJAAIAAAAQABEAAAAJAAIAAAAQABAAAAAJAAIAAAAQAA8AAAAJAAIAAAAQAA4AAAAFAAEAAAAQAA0AAAAIAAAAAAAPAB0AAAAJAAMAAAAPABwAAAAJAAIAAAAPABsAAAAJAAIAAAAPABoAAAAJAAIAAAAPABkAAAAJAAIAAAAPABgAAAAJAAIAAAAPABcAAAAJAAIAAAAPABYAAAAJAAIAAAAPABUAAAAJAAIAAAAPABQAAAAJAAIAAAAPABMAAAAJAAIAAAAPABIAAAAJAAIAAAAPABEAAAAJAAIAAAAPABAAAAAJAAIAAAAPAA8AAAAJAAIAAAAPAA4AAAAKAAAAAAAOAB0AAAAJAAMAAAAOABwAAAAJAAIAAAAOABsAAAAJAAIAAAAOABoAAAAJAAIAAAAOABkAAAAJAAIAAAAOABgAAAAJAAIAAAAOABcAAAAJAAIAAAAOABYAAAAJAAIAAAAOABUAAAAJAAIAAAAOABQAAAAJAAIAAAAOABMAAAAJAAIAAAAOABIAAAAJAAIAAAAOABEAAAAJAAIAAAAOABAAAAAJAAIAAAAOAA8AAAAJAAIAAAAOAA4AAAAKAAAAAAANAB0AAAAJAAMAAAANABwAAAAJAAIAAAANABsAAAAJAAIAAAANABoAAAAJAAIAAAANABkAAAAJAAIAAAANABgAAAAJAAIAAAANABcAAAAJAAIAAAANABYAAAAJAAIAAAANABUAAAAJAAIAAAANABQAAAAJAAIAAAANABMAAAAJAAIAAAANABIAAAAJAAIAAAANABEAAAAJAAIAAAANABAAAAAJAAIAAAANAA8AAAAJAAIAAAANAA4AAAAKAAAAAAAMAB0AAAAJAAMAAAAMABwAAAAJAAIAAAAMABsAAAAJAAIAAAAMABoAAAAJAAIAAAAMABkAAAAJAAIAAAAMABgAAAAJAAIAAAAMABcAAAAJAAIAAAAMABYAAAAJAAIAAAAMABUAAAAJAAIAAAAMABQAAAAJAAIAAAAMABMAAAAJAAIAAAAMABIAAAAJAAIAAAAMABEAAAAJAAIAAAAMABAAAAAJAAIAAAAMAA8AAAAJAAIAAAAMAA4AAAAKAAAAAAALAB0AAAAJAAMAAAALABwAAAAJAAIAAAALABsAAAAJAAIAAAALABoAAAAJAAIAAAALABkAAAAJAAIAAAALABgAAAAJAAIAAAALABcAAAAJAAIAAAALABYAAAAJAAIAAAALABUAAAAJAAIAAAALABQAAAAJAAIAAAALABMAAAAJAAIAAAALABIAAAAJAAIAAAALABEAAAAJAAIAAAALABAAAAAJAAIAAAALAA8AAAAJAAIAAAALAA4AAAAKAAAAAAALAAgAAAALAAMAAAALAAcAAAALAAAAAAAKAB0AAAAJAAMAAAAKABwAAAAJAAIAAAAKABsAAAAJAAIAAAAKABoAAAAJAAIAAAAKABkAAAAJAAIAAAAKABgAAAAJAAIAAAAKABcAAAAJAAIAAAAKABYAAAAJAAIAAAAKABUAAAAJAAIAAAAKABQAAAAJAAIAAAAKABMAAAAJAAIAAAAKABIAAAAFAAEAAAAKABEAAAAIAAEAAAAKABAAAAAFAAIAAAAKAA8AAAAJAAIAAAAKAA4AAAAKAAAAAAAKAAgAAAAFAAMAAAAKAAcAAAAIAAAAAAAJAB0AAAAJAAMAAAAJABwAAAAJAAIAAAAJABsAAAAJAAIAAAAJABoAAAAJAAIAAAAJABkAAAAJAAIAAAAJABgAAAAJAAIAAAAJABcAAAAJAAIAAAAJABYAAAAJAAIAAAAJABUAAAAJAAIAAAAJABQAAAAFAAEAAAAJABMAAAAIAAEAAAAJABIAAAAIAAAAAAAJABAAAAAJAAMAAAAJAA8AAAAJAAIAAAAJAA4AAAAKAAAAAAAJAAgAAAACAAMAAAAIAB0AAAAJAAMAAAAIABwAAAAJAAIAAAAIABsAAAAJAAIAAAAIABoAAAAJAAIAAAAIABkAAAAJAAIAAAAIABgAAAAJAAIAAAAIABcAAAAJAAIAAAAIABYAAAAJAAIAAAAIABUAAAAJAAIAAAAIABQAAAAKAAAAAAAIABAAAAAJAAMAAAAIAA8AAAAJAAIAAAAIAA4AAAAGAAEAAAAIAA0AAAALAAAAAAAIAAgAAAACAAMAAAAHAB0AAAAJAAMAAAAHABwAAAAJAAIAAAAHABsAAAAJAAIAAAAHABoAAAAJAAIAAAAHABkAAAAJAAIAAAAHABgAAAAJAAIAAAAHABcAAAAJAAIAAAAHABYAAAAJAAIAAAAHABUAAAAJAAIAAAAHABQAAAAKAAAAAAAHABAAAAAJAAMAAAAHAA8AAAAJAAIAAAAHAA4AAAAJAAIAAAAHAA0AAAAKAAAAAAAHAAkAAAALAAMAAAAHAAgAAAAGAAAAAAAGAB0AAAAJAAMAAAAGABwAAAAJAAIAAAAGABsAAAAJAAIAAAAGABoAAAAJAAIAAAAGABkAAAAJAAIAAAAGABgAAAAJAAIAAAAGABcAAAAFAAEAAAAGABYAAAAIAAEAAAAGABUAAAAIAAEAAAAGABQAAAAIAAAAAAAGABAAAAAJAAMAAAAGAA8AAAAJAAIAAAAGAA4AAAAJAAIAAAAGAA0AAAAGAAEAAAAGAAwAAAALAAIAAAAGAAsAAAALAAIAAAAGAAoAAAALAAIAAAAGAAkAAAAGAAIAAAAGAAgAAAAKAAAAAAAFAB0AAAAJAAMAAAAFABwAAAAJAAIAAAAFABsAAAAJAAIAAAAFABoAAAAJAAIAAAAFABkAAAAJAAIAAAAFABgAAAAJAAIAAAAFABcAAAAKAAAAAAAFABAAAAAIAAMAAAAFAA8AAAAFAAIAAAAFAA4AAAAJAAIAAAAFAA0AAAAJAAIAAAAFAAwAAAAJAAIAAAAFAAsAAAAJAAIAAAAFAAoAAAAJAAIAAAAFAAkAAAAJAAIAAAAFAAgAAAAGAAEAAAAFAAcAAAALAAIAAAAFAAYAAAALAAAAAAAEAB0AAAAJAAMAAAAEABwAAAAJAAIAAAAEABsAAAAJAAIAAAAEABoAAAAJAAIAAAAEABkAAAAFAAEAAAAEABgAAAAIAAEAAAAEABcAAAAIAAAAAAAEAA8AAAAIAAMAAAAEAA4AAAAIAAEAAAAEAA0AAAAIAAEAAAAEAAwAAAAIAAEAAAAEAAsAAAAIAAEAAAAEAAoAAAAIAAEAAAAEAAkAAAAIAAEAAAAEAAgAAAAIAAEAAAAEAAcAAAAIAAEAAAAEAAYAAAAKAAIAAAAEAAUAAAAHAAEAAAAEAAQAAAAAAAAAAAADAB0AAAAIAAMAAAADABwAAAAIAAEAAAADABsAAAAIAAEAAAADABoAAAAIAAEAAAADABkAAAAIAAAAAAADAAYAAAAIAAMAAAADAAUAAAAIAAAAAAA=")
tile_set = ExtResource("8_g13xh")

[node name="ShoreLayer" type="TileMapLayer" parent="Tilemap"]
tile_map_data = PackedByteArray("AAADAAsAAAAKAAEAAAADAAwAAAAKAAEAAAADAA4AAAAKAAEAAAADAA8AAAAKAAEAAAAKAA0AAAAKAAEAAAAKAB4AAAAKAAEAAAALAB4AAAAKAAEAAAAMAB4AAAAKAAEAAAANAB4AAAAKAAEAAAAOAB4AAAAKAAEAAAAPAB4AAAAKAAEAAAAQAB4AAAAKAAEAAAARAB4AAAAKAAEAAAASAB4AAAAKAAEAAAACAAUAAAAKAAEAAAACAAYAAAAKAAEAAAADAA0AAAAKAAEAAAAEABAAAAAKAAEAAAAFABEAAAAKAAEAAAAFABUAAAAKAAEAAAAFABYAAAAKAAEAAAAGABEAAAAKAAEAAAAGABMAAAAKAAEAAAAHABEAAAAKAAEAAAAJAA0AAAAKAAEAAAAJAB4AAAAKAAEAAAALAA0AAAAKAAEAAAAVABIAAAAKAAEAAAAYABkAAAAKAAEAAAAYABoAAAAKAAEAAAAaABgAAAAKAAEAAAAdABsAAAAKAAEAAAACABkAAAAKAAEAAAACABoAAAAKAAEAAAACABsAAAAKAAEAAAACABwAAAAKAAEAAAACAB0AAAAKAAEAAAADAAQAAAAKAAEAAAADAAcAAAAKAAEAAAADAAgAAAAKAAEAAAADAAkAAAAKAAEAAAADAAoAAAAKAAEAAAADABcAAAAKAAEAAAADABgAAAAKAAEAAAADAB4AAAAKAAEAAAAEAAMAAAAKAAEAAAAEABYAAAAKAAEAAAAEAB4AAAAKAAEAAAAFAAQAAAAKAAEAAAAFAAUAAAAKAAEAAAAFABQAAAAKAAEAAAAFAB4AAAAKAAEAAAAGAAYAAAAKAAEAAAAGAAcAAAAKAAEAAAAGAB4AAAAKAAEAAAAHAAcAAAAKAAEAAAAHAAoAAAAKAAEAAAAHAAsAAAAKAAEAAAAHAAwAAAAKAAEAAAAHABMAAAAKAAEAAAAHAB4AAAAKAAEAAAAIAAcAAAAKAAEAAAAIAAkAAAAKAAEAAAAIAAwAAAAKAAEAAAAIABEAAAAKAAEAAAAIABIAAAAKAAEAAAAIABMAAAAKAAEAAAAIAB4AAAAKAAEAAAAJAAcAAAAKAAEAAAAJAAkAAAAKAAEAAAAJABEAAAAKAAEAAAAKAAYAAAAKAAEAAAAKAAkAAAAKAAEAAAALAAYAAAAKAAEAAAALAAkAAAAKAAEAAAAMAAcAAAAKAAEAAAAMAAgAAAAKAAEAAAAMAA0AAAAKAAEAAAANAA0AAAAKAAEAAAAOAA0AAAAKAAEAAAAPAA0AAAAKAAEAAAAQAAwAAAAKAAEAAAARAAwAAAAKAAEAAAASAA0AAAAKAAEAAAATAA4AAAAKAAEAAAATABQAAAAKAAEAAAATABUAAAAKAAEAAAATABYAAAAKAAEAAAATAB0AAAAKAAEAAAAUAA4AAAAKAAEAAAAUABMAAAAKAAEAAAAUABcAAAAKAAEAAAAUABgAAAAKAAEAAAAUABkAAAAKAAEAAAAUAB0AAAAKAAEAAAAVAA8AAAAKAAEAAAAVABAAAAAKAAEAAAAVABkAAAAKAAEAAAAVABwAAAAKAAEAAAAWABEAAAAKAAEAAAAWABoAAAAKAAEAAAAWABsAAAAKAAEAAAAYABsAAAAKAAEAAAAZABgAAAAKAAEAAAAZABwAAAAKAAEAAAAaAB0AAAAKAAEAAAAbABcAAAAKAAEAAAAbAB0AAAAKAAEAAAAcABgAAAAKAAEAAAAcABwAAAAKAAEAAAAdABkAAAAKAAEAAAAdABoAAAAKAAEAAAA=")
tile_set = ExtResource("8_g13xh")
navigation_enabled = false

[node name="BiomeLayer" type="TileMapLayer" parent="Tilemap"]
tile_map_data = PackedByteArray("AAAUABsAAAAAAAMAAAATABwAAAAAAAMAAAATABoAAAALAAMAAAATABkAAAALAAIAAAATABgAAAALAAAAAAATABEAAAAAAAIAAAATABAAAAAAAAAAAAASABoAAAAIAAMAAAASABkAAAAFAAIAAAASABgAAAAKAAAAAAASABMAAAAAAAMAAAASAA8AAAAAAAMAAAARAB0AAAADAAMAAAARABkAAAAIAAMAAAARABgAAAAEAAEAAAARABcAAAAAAAEAAAARABYAAAAAAAEAAAARABUAAAAAAAAAAAARAA4AAAADAAMAAAAQAB0AAAABAAMAAAAQAA4AAAABAAMAAAAMABAAAAALAAMAAAAMAA8AAAALAAAAAAALABUAAAAAAAIAAAALABQAAAAAAAEAAAALABMAAAAAAAEAAAALABIAAAADAAEAAAALABEAAAAAAAEAAAALABAAAAAEAAIAAAALAA8AAAAIAAAAAAAKAB0AAAAAAAMAAAAKABIAAAABAAMAAAAJABUAAAAAAAMAAAAJAA8AAAALAAMAAAAJAA4AAAALAAAAAAAIAA8AAAAIAAMAAAAIAA4AAAAIAAAAAAAHABUAAAADAAIAAAAHABQAAAAAAAAAAAAGABcAAAAAAAIAAAAGABYAAAAAAAEAAAAGABUAAAABAAAAAAAFABgAAAADAAMAAAAFAAoAAAAAAAMAAAAFAAgAAAADAAMAAAAEABwAAAAAAAMAAAAEABgAAAABAAMAAAAEAAgAAAABAAIAAAAEAAcAAAAAAAEAAAAEAAYAAAAAAAAAAAATABsAAQADAAMAAAASABsAAQACAAMAAAASABIAAQALAAMAAAASABEAAQALAAIAAAASABAAAQALAAAAAAARABwAAQALAAMAAAARABsAAQAGAAAAAAARABMAAQALAAMAAAARABIAAQAJAAEAAAARABEAAQAIAAEAAAARABAAAQAFAAAAAAAQABwAAQAJAAMAAAAQABsAAQAGAAEAAAAQABoAAQALAAIAAAAQABkAAQALAAIAAAAQABgAAQALAAIAAAAQABcAAQALAAIAAAAQABYAAQAHAAEAAAAQABUAAQAAAAEAAAAQABQAAQAAAAEAAAAQABMAAQAEAAIAAAAQABIAAQAIAAAAAAAQABAAAQAGAAMAAAAQAA8AAQALAAAAAAAPAB0AAQADAAIAAAAPABwAAQAEAAIAAAAPABsAAQAIAAEAAAAPABoAAQAIAAEAAAAPABkAAQAFAAIAAAAPABgAAQAJAAIAAAAPABcAAQAFAAEAAAAPABYAAQAIAAAAAAAPABAAAQAJAAMAAAAPAA8AAQAKAAAAAAAOAB0AAQACAAMAAAAOABkAAQAIAAMAAAAOABgAAQAFAAIAAAAOABcAAQAKAAAAAAAOABEAAQALAAMAAAAOABAAAQAJAAEAAAAOAA8AAQAIAAAAAAANAB0AAQACAAMAAAANABgAAQAJAAMAAAANABcAAQAGAAEAAAANABYAAQALAAIAAAANABUAAQALAAIAAAANABQAAQALAAAAAAANABEAAQAFAAMAAAANABAAAQAIAAAAAAAMAB0AAQACAAMAAAAMABgAAQAIAAMAAAAMABcAAQAFAAIAAAAMABYAAQAFAAEAAAAMABUAAQAIAAEAAAAMABQAAQAEAAEAAAAMABMAAQAAAAEAAAAMABIAAQAAAAEAAAAMABEAAQABAAAAAAALAB0AAQABAAMAAAALABcAAQAJAAMAAAALABYAAQAKAAAAAAAKABwAAQADAAMAAAAKABkAAQALAAMAAAAKABgAAQALAAIAAAAKABcAAQAGAAIAAAAKABYAAQAKAAAAAAAJABwAAQAGAAMAAAAJABsAAQAHAAEAAAAJABoAAQAAAAEAAAAJABkAAQAEAAIAAAAJABgAAQAFAAIAAAAJABcAAQAJAAIAAAAJABYAAQAKAAAAAAAIABwAAQAJAAMAAAAIABsAAQAKAAAAAAAIABgAAQAJAAMAAAAIABcAAQAJAAIAAAAIABYAAQAKAAAAAAAHABwAAQAJAAMAAAAHABsAAQAGAAEAAAAHABoAAQALAAIAAAAHABkAAQAHAAEAAAAHABgAAQAEAAIAAAAHABcAAQAIAAEAAAAHABYAAQAIAAAAAAAGABwAAQAJAAMAAAAGABsAAQAJAAIAAAAGABoAAQAJAAIAAAAGABkAAQAKAAAAAAAFABwAAQAIAAMAAAAFABsAAQAIAAEAAAAFABoAAQAIAAIAAAAFABkAAQAIAAAAAAAEABoAAQABAAMAAAAPABUAAgALAAMAAAAPABQAAgALAAAAAAAPABEAAgAAAAMAAAAOABwAAgADAAMAAAAOABoAAgADAAMAAAAOABUAAgAIAAMAAAAOABQAAgAEAAEAAAAOABMAAgAHAAIAAAAOABIAAgALAAAAAAANABwAAgAGAAMAAAANABsAAgALAAIAAAANABoAAgALAAEAAAANABkAAgALAAAAAAANABMAAgAIAAMAAAANABIAAgAIAAAAAAAMABwAAgAJAAMAAAAMABsAAgAJAAIAAAAMABoAAgAJAAIAAAAMABkAAgAKAAAAAAALABwAAgAIAAMAAAALABsAAgAIAAEAAAALABoAAgAIAAEAAAALABkAAgAIAAAAAAA=")
tile_set = ExtResource("7_gg3rn")
navigation_enabled = false
